--- a/apps/capital/src/index.html
+++ b/apps/capital/src/index.html
@@ -6,8 +6,19 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
-  <body>
-    <capital-root></capital-root>
+  <body class="mat-typography">
+    <div class="wrapper">
+      <capital-root></capital-root>
+    </div>
   </body>
 </html>
